# opengl_experiment

./: .gitignore  buffer.h  gltest.cpp  meson.build  other.cpp  other.h  program.cpp  program.h  shader.cpp  shader.h  vao.h  vector.h  vertex.h  window.cpp  window.h
shader/: test.fs  test.vs
